# otus-python-basic

./: .gitignore  README.md  requirements.txt
.github/workflows/: main.yml
Practic_01/: main.py
homework_01/: main.py
homework_02/: __init__.py  base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: jsonplaceholder_requests.py  main.py  models.py  requirements.txt  test.py  url_response.txt
homework_04/: app.py
homework_04/templates/: about.html  base.html  index.html
homework_05/: Dockerfile  pyproject.toml
homework_05/web-app/templates/: index.html
homework_06/: docker-compose.yml
homework_06/pg-data/: postmaster.pid
homework_06/pg-data/global/: 1262  2671  pg_control  pg_internal.init
homework_06/pg-data/pg_stat/: global.stat
homework_06/pg-data/pg_stat_tmp/: db_0.stat  db_13408.stat  db_16384.stat  global.stat
homework_06/pg-data/pg_xact/: 0000
homework_06/web-app/: app.py  config.py  entrypoint.sh  pyproject.toml
homework_06/web-app/migrations/versions/: 33f38becd55e_.py  4690fe55ea2b_.py
homework_06/web-app/templates/: about.html  add.html  index.html
homework_06/web-app/web_app/models/: product.py
homework_06/web-app/web_app/views/: products.py
homework_07/myproject/myproject/: settings.py  urls.py
homework_07/myproject/picpart/: models.py  tasks.py  (+1 more)
homework_08/: README.md  Галерея кроссвордов.pptx
homework_08/myproject/: requirements.txt
homework_09/myproject/: requirements.txt
practic_01/: main.py  pet.py  user.py
presentation/: Галерея кроссвордов.pptx
testing/test_homework_03/: test_main.py
(+216 files in other folders)
