[tool.poetry]
name = "web app"
version = "0.1.0"
description = ""
authors = ["Dmitryi Pletnev <dmpinform@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask-Migrate = "^3.0.1"
Flask = "<2"
psycopg2 = "^2.8.6"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
